# robot-arm-ik

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: palletizing_cell.py  pick_and_place.py  pick_and_place_mujoco.py
assets/: ATTRIBUTION.md
src/armik/: __init__.py  analytical.py  ik.py  robot.py  rotations.py  trajectory.py
tests/: test_analytical_ik.py  test_ik.py  test_kinematics.py  test_trajectory.py  test_ur5e.py
